hphp/test/slow/memoize/interface.php.expectf

Fatal error: <<__Memoize>> cannot be used in interfaces in %s/test/slow/memoize/interface.php on line 6
